# monotext-rs

./: Cargo.toml  README.md  test.md  test.txt
.forgejo/workflows/: main.yml
src/: lib.rs  main.rs  md.rs  pdf.rs  render.rs  serde_intern.rs
