[package]
name = "monotext"
description = "Monotext is a tool for creating well-formatted, professional plain-text documents with cover pages, headers, footers, and automatic page layout for papers, reports, and structured content."
version = "0.0.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://codeberg.org/siebert/monotext-rs"

[dependencies]
itertools = "0.14.0"
textwrap = "0.16.2"
time = "0.3.46"
unicode-width = "0.2.2"
