[package]
name = "monotext"
description = "Monotext is a tool for creating well-formatted, professional plain-text documents with cover pages, headers, footers and automatic page layout for papers, reports and structured content"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0"
repository = "https://codeberg.org/siebert/monotext-rs"
readme = "README.md"

[dependencies]
clap = { version = "4.5.56", features = ["derive", "unicode", "wrap_help", "env"], optional = true }
pulldown-cmark = { version = "0.13.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.34", optional = true }
itertools = "0.14.0"
textwrap = "0.16.2"
time = { version = "0.3.46", features = ["parsing"] }
unicode-width = "0.2.2"
anyhow = "1.0.101"
printpdf = { version = "0.9.0", optional = true }

[[bin]]
name = "monotext"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "monotext"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["dep:clap", "md", "pdf"]
serde = ["dep:serde", "time/serde"]
md = ["serde", "dep:pulldown-cmark", "dep:serde_yaml"]
pdf = ["dep:printpdf"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
